--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,20 @@ language: python
 python:
   - "3.6"
   - "3.7"
+
+before_install:
+    - sudo apt-get update -q
+    - python$PY -m pip install Cython
+    - python$PY -c "import numpy;print(numpy.__version__)"
+
+# command to install dependencies
+install:
+    - pip install -r requirements.txt
+
+# Os tests
+os:
+    - linux
+
+# command to run tests
+script:
+    - python3 -c "import funcx; print(funcx.__version__)"
