--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ python:
   - "3.6"
   - "3.7"
 
+matrix:
+    include:
+        - python: 3.7
+          dist: xenial
+          sudo: true
+
 before_install:
     - sudo apt-get update -q
     - python$PY -m pip install Cython
