--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: python
 python:
   - "3.6"
-  - "3.7"
+
+matrix:
+    include:
+        - python: 3.7
+          dist: xenial
+          sudo: true
 
 before_install:
     - sudo apt-get update -q
