Adding a debug line

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,6 +26,7 @@ jobs:
         python -m pip install --upgrade pip setuptools wheel
         python -m pip install -r funcx_sdk/requirements.txt
         python -m pip install -r funcx_sdk/test-requirements.txt
+        pip list
         python -m pip install -r funcx_endpoint/requirements.txt
         python -m pip install -r funcx_endpoint/test-requirements.txt
         pip list
