--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -81,6 +81,7 @@ jobs:
     - name: Build funcX-web-endpoint Image
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
+        dockerfile: Dockerfile-endpoint
         name: funcx/kube-endpoint:${{ steps.extract_tag_name.outputs.imagetag }}
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
