Change worker log dir and revert version number

--- a/helm/funcx_endpoint/templates/endpoint-instance-config.yaml
+++ b/helm/funcx_endpoint/templates/endpoint-instance-config.yaml
@@ -27,6 +27,7 @@ data:
         heartbeat_period=15,
         heartbeat_threshold=200,
         max_workers_per_node=1,
+        working_dir='/tmp/worker_logs',
         funcx_service_address="{{ .Values.funcXServiceAddress }}/v1"
     )
 
