--- a/helm/funcx_endpoint/Chart.yaml
+++ b/helm/funcx_endpoint/Chart.yaml
@@ -1,15 +1,7 @@
 apiVersion: v2
 name: funcx_endpoint
-description: A Helm chart for Kubernetes
+description: Deploy a funcX endpoint into a cluster
 
-# A chart can be either an 'application' or a 'library' chart.
-#
-# Application charts are a collection of templates that can be packaged into versioned archives
-# to be deployed.
-#
-# Library charts provide useful utilities or functions for the chart developer. They're included as
-# a dependency of application charts to inject those utilities and functions into the rendering
-# pipeline. Library charts do not define any templates and therefore cannot be deployed.
 type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
@@ -18,4 +10,4 @@ version: 0.1.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
-appVersion: 1.16.0
+appVersion: 0.0.3
