Add maxWorkersPerPod value to helm chart

--- a/helm/funcx_endpoint/templates/endpoint-instance-config.yaml
+++ b/helm/funcx_endpoint/templates/endpoint-instance-config.yaml
@@ -28,6 +28,7 @@ data:
             namespace='{{ .Values.workerNamespace }}'
         ),
         strategy=KubeSimpleStrategy(max_idletime=3600),
+        max_workers_per_node={{ .Values.maxWorkersPerPod }},
         scheduler_mode='hard',
         heartbeat_period=15,
         heartbeat_threshold=200,
