--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,7 +58,7 @@ jobs:
       run: |
         cd funcx_endpoint
         pip install .
-        python -c "from funcx_endpoint.endpoint.version import VERSION"
+        python -c "from funcx_endpoint.version import VERSION"
         funcx-endpoint -v
         cd ..
     - name: Lint with Flake8
