--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,7 +40,7 @@ jobs:
         cd ..
     - name: Lint with Flake8
       run: |
-        flake8
+        flake8 funcx_sdk
 #    - name: Test with pytest
 #      run: |
 #        pytest
