--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,7 +66,10 @@ jobs:
         flake8 funcx_endpoint
     - name: Test with pytest
       run: |
-        PYTHONPATH=funcx_endpoint python -m pytest funcx_endpoint/tests/funcx_endpoint
+        PYTHONPATH=funcx_endpoint python -m coverage run -m  pytest funcx_endpoint/tests/funcx_endpoint
+    - name: Report coverage with Codecov
+      run: |
+        codecov --token=${{ secrets.CODECOV_TOKEN }}
 
   publish:
     needs: test
