--- a/helm/funcx_endpoint/templates/endpoint-instance-config.yaml
+++ b/helm/funcx_endpoint/templates/endpoint-instance-config.yaml
@@ -10,42 +10,49 @@ metadata:
 data:
   config.py: |
     from funcx_endpoint.endpoint.utils.config import Config
+    from funcx_endpoint.executors import HighThroughputExecutor
     from funcx_endpoint.providers.kubernetes.kube import KubernetesProvider
     from funcx_endpoint.strategies import KubeSimpleStrategy
+    from parsl.addresses import address_by_route
 
     config = Config(
-        scaling_enabled=True,
-        provider=KubernetesProvider(
-            init_blocks={{ .Values.initBlocks }},
-            min_blocks={{ .Values.minBlocks }},
-            max_blocks={{ .Values.maxBlocks }},
-            init_cpu= {{ .Values.initCPU }},
-            max_cpu={{ .Values.maxCPU }},
-            init_mem="{{ .Values.initMem }}",
-            max_mem="{{ .Values.maxMem }}",
-            image="{{ .Values.workerImage }}",
-            worker_init='{{ .Values.workerInit }}',
-            namespace='{{ .Values.workerNamespace }}'
-        ),
-        strategy=KubeSimpleStrategy(max_idletime=3600),
-        max_workers_per_node={{ .Values.maxWorkersPerPod }},
+        executors=[
+            HighThroughputExecutor(
+                max_workers_per_node={{ .Values.maxWorkersPerPod }},
+                address=address_by_route(),
+                strategy=KubeSimpleStrategy(max_idletime=3600),
+                provider=KubernetesProvider(
+                    init_blocks={{ .Values.initBlocks }},
+                    min_blocks={{ .Values.minBlocks }},
+                    max_blocks={{ .Values.maxBlocks }},
+                    init_cpu={{ .Values.initCPU }},
+                    max_cpu={{ .Values.maxCPU }},
+                    init_mem="{{ .Values.initMem }}",
+                    max_mem="{{ .Values.maxMem }}",
+                    image="{{ .Values.workerImage }}",
+                    worker_init='{{ .Values.workerInit }}',
+                    namespace='{{ .Values.workerNamespace }}',
+                    incluster_config=True
+                ),
+            )
+        ],
         scheduler_mode='hard',
         heartbeat_period=15,
         heartbeat_threshold=200,
         working_dir='{{ .Values.workingDir }}',
-        funcx_service_address="{{ .Values.funcXServiceAddress }}/v1",
-        detach_endpoint=False,
-        interchange_file_logger=False
+        funcx_service_address="{{ .Values.funcXServiceAddress }}/v2",
+        scaling_enabled=True,
+        detach_endpoint={{- ternary "True" "False" .Values.detachEndpoint }}
     )
 
     # For now, visible_to must be a list of URNs for globus auth users or groups, e.g.:
     # urn:globus:auth:identity:{user_uuid}
     # urn:globus:groups:id:{group_uuid}
     meta = {
-    "name": "default",
-    "description": "",
-    "organization": "",
-    "department": "",
-    "public": True,
-    "visible_to": []
+        "name": "default",
+        "description": "",
+        "organization": "",
+        "department": "",
+        "public": True,
+        "visible_to": []
     }
