--- a/Dockerfile-endpoint
+++ b/Dockerfile-endpoint
@@ -1,7 +1,7 @@
 FROM python:3.6
 RUN mkdir /opt/funcx
 RUN pip install kubernetes
-
+RUN pip install --no-binary :all: --force-reinstall pyzmq
 
 COPY funcx_sdk /opt/funcx/funcx_sdk/
 WORKDIR /opt/funcx/funcx_sdk
