change workingDir to logDir

--- a/helm/funcx_endpoint/values.yaml
+++ b/helm/funcx_endpoint/values.yaml
@@ -12,7 +12,7 @@ image:
 workerImage: python:3.6-buster
 workerInit: pip install funcx-endpoint>=0.2.0
 workerNamespace: default
-workingDir: /tmp/worker_logs
+logDir: /tmp/worker_logs
 
 rbacEnabled: true
 nameOverride: funcx-endpoint
