--- a/.github/workflows/tutorial.yaml
+++ b/.github/workflows/tutorial.yaml
@@ -23,8 +23,8 @@ jobs:
     - name: Install dependencies for funcx-sdk
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        python -m pip install -r funcx_sdk/requirements.txt
-        python -m pip install -r funcx_sdk/test-requirements.txt
+        # python -m pip install -r funcx_sdk/requirements.txt
+        # python -m pip install -r funcx_sdk/test-requirements.txt
         pip list
     - name: Check for vulnerabilities in libraries
       run: |
@@ -32,10 +32,8 @@ jobs:
         pip freeze | safety check
     - name: Test sdk by just importing
       run: |
-        cd funcx_sdk
-        pip install .
+        python -m pip install funcx
         python -c "from funcx.sdk.client import FuncXClient"
-        cd ..
     - name: Test tutorial endpoint
       run: |
         timeout 300 python funcx_endpoint/tests/tutorial_ep/test_tutotial_ep.py -t '4b116d3c-1703-4f8f-9f6f-39921e5864df' -i ${{ secrets.API_CLIENT_ID }} -s ${{ secrets.API_CLIENT_SECRET }}
