Add log_to_std_streams to control logging streams
1. Use `log_to_std_streams` to replace `detach_endpoint` in top level config,
   with default value `False`, which means logging goes to files by default.
2. Hard code daemon context to be detached.
3. Introduce a new option `log_to_std_streams` for executor, with defualt value
   `False`, which means the log of executor's interchange goes to file by default.

--- a/helm/funcx_endpoint/templates/endpoint-instance-config.yaml
+++ b/helm/funcx_endpoint/templates/endpoint-instance-config.yaml
@@ -42,7 +42,7 @@ data:
         heartbeat_threshold=200,
         log_dir='{{ .Values.logDir }}',
         funcx_service_address="{{ .Values.funcXServiceAddress }}/v2",
-        detach_endpoint={{- ternary "True" "False" .Values.detachEndpoint }}
+        log_to_std_streams={{- ternary "False" "True" .Values.detachEndpoint }}
     )
 
     # For now, visible_to must be a list of URNs for globus auth users or groups, e.g.:
