Ensure isort is applied consistently
Without this change, `isort` behavior could change on a branch
unexpectedly. We aren't fully sure of the reason for this, but we can
enforce a specific config so that the behavior cannot change.

- Explicitly set the `--settings-path` in pre-commit config so that
  `.isort.cfg` is always used. Otherwise, `isort` will try to deduce
  which config to use based on the file being fixed
- Set `funcx_endpoint` as first-party in `.isort.cfg` and
  `funcx_sdk/setup.cfg`. Perhaps there's a better way, but keeping
  both configs in sync is an easy solution for now.
- Apply the resulting fixes from `pre-commit run -a`

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,9 @@ repos:
   rev: 5.8.0
   hooks:
     - id: isort
+      # explicitly pass settings file so that isort does not try to deduce
+      # which settings to use based on a file's directory
+      args: ["--settings-path", ".isort.cfg"]
       # FIXME: temporary exclude to reduce conflicts, remove this
       exclude: ^funcx_endpoint/
       # end FIXME
