--- a/funcx_sdk/setup.cfg
+++ b/funcx_sdk/setup.cfg
@@ -1,6 +1,6 @@
 [isort]
 profile = black
-known_first_party = funcx
+known_first_party = funcx,funcx_endpoint
 
 [flake8]
 # config to be black-compatible
