--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -82,10 +82,26 @@ jobs:
       run: echo "##[set-output name=imagetag;]$(echo ${GITHUB_REF##*/})"
       id: extract_tag_name
 
-    - name: Build funcX-endpoint Image
+    - name: Build funcX-endpoint Image for python 3.6
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
-        dockerfile: Dockerfile-endpoint
-        name: funcx/kube-endpoint:${{ steps.extract_tag_name.outputs.imagetag }}
+        dockerfile: Dockerfile-endpoint-3.6
+        name: funcx/kube-endpoint:${{ steps.extract_tag_name.outputs.imagetag }}-3.6
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build funcX-endpoint Image for python 3.7
+      uses: elgohr/Publish-Docker-Github-Action@master
+      with:
+        dockerfile: Dockerfile-endpoint-3.7
+        name: funcx/kube-endpoint:${{ steps.extract_tag_name.outputs.imagetag }}-3.7
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build funcX-endpoint Image for python 3.8
+      uses: elgohr/Publish-Docker-Github-Action@master
+      with:
+        dockerfile: Dockerfile-endpoint-3.8
+        name: funcx/kube-endpoint:${{ steps.extract_tag_name.outputs.imagetag }}-3.8
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
