Added scheduler mode back to HighThroughputExecutor

--- a/helm/funcx_endpoint/templates/endpoint-instance-config.yaml
+++ b/helm/funcx_endpoint/templates/endpoint-instance-config.yaml
@@ -21,6 +21,7 @@ data:
                 max_workers_per_node={{ .Values.maxWorkersPerPod }},
                 address=address_by_route(),
                 strategy=KubeSimpleStrategy(max_idletime=3600),
+                scheduler_mode='hard',
                 container_type='docker',
                 provider=KubernetesProvider(
                     init_blocks={{ .Values.initBlocks }},
