--- a/helm/funcx_endpoint/templates/endpoint-instance-config.yaml
+++ b/helm/funcx_endpoint/templates/endpoint-instance-config.yaml
@@ -11,30 +11,17 @@ data:
   config.py: |
     from funcx_endpoint.endpoint.utils.config import Config
     from funcx_endpoint.executors import HighThroughputExecutor
-    from funcx_endpoint.providers.kubernetes.kube import KubernetesProvider
-    from funcx_endpoint.strategies import KubeSimpleStrategy
-    from parsl.addresses import address_by_route
+    from parsl.providers import LocalProvider
+
 
     config = Config(
         executors=[
             HighThroughputExecutor(
                 max_workers_per_node={{ .Values.maxWorkersPerPod }},
-                address=address_by_route(),
-                strategy=KubeSimpleStrategy(max_idletime=3600),
-                container_type='docker',
-                scheduler_mode='hard',
-                provider=KubernetesProvider(
+                provider=LocalProvider(
                     init_blocks={{ .Values.initBlocks }},
                     min_blocks={{ .Values.minBlocks }},
                     max_blocks={{ .Values.maxBlocks }},
-                    init_cpu={{ .Values.initCPU }},
-                    max_cpu={{ .Values.maxCPU }},
-                    init_mem="{{ .Values.initMem }}",
-                    max_mem="{{ .Values.maxMem }}",
-                    image="{{ .Values.workerImage }}",
-                    worker_init='{{ .Values.workerInit }}',
-                    namespace='{{ .Values.workerNamespace }}',
-                    incluster_config=True
                 ),
             )
         ],
