--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -84,24 +84,45 @@ jobs:
 
     - name: Build funcX-endpoint Image for python 3.6
       uses: elgohr/Publish-Docker-Github-Action@master
+      env:
+        PYTHON_VERSION: 3.6
       with:
-        dockerfile: Dockerfile-endpoint-3.6
+        dockerfile: Dockerfile-endpoint
         name: funcx/kube-endpoint:${{ steps.extract_tag_name.outputs.imagetag }}-3.6
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+        buildargs: PYTHON_VERSION
 
     - name: Build funcX-endpoint Image for python 3.7
       uses: elgohr/Publish-Docker-Github-Action@master
+      env:
+        PYTHON_VERSION: 3.7
       with:
-        dockerfile: Dockerfile-endpoint-3.7
+        dockerfile: Dockerfile-endpoint
         name: funcx/kube-endpoint:${{ steps.extract_tag_name.outputs.imagetag }}-3.7
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+        buildargs: PYTHON_VERSION
+
 
     - name: Build funcX-endpoint Image for python 3.8
       uses: elgohr/Publish-Docker-Github-Action@master
+      env:
+        PYTHON_VERSION: 3.8
       with:
-        dockerfile: Dockerfile-endpoint-3.8
+        dockerfile: Dockerfile-endpoint
         name: funcx/kube-endpoint:${{ steps.extract_tag_name.outputs.imagetag }}-3.8
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+        buildargs: PYTHON_VERSION
+
+    - name: Build funcX-endpoint Image for python 3.9
+      uses: elgohr/Publish-Docker-Github-Action@master
+      env:
+        PYTHON_VERSION: 3.9
+      with:
+        dockerfile: Dockerfile-endpoint
+        name: funcx/kube-endpoint:${{ steps.extract_tag_name.outputs.imagetag }}-3.9
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        buildargs: PYTHON_VERSION
