--- a/Dockerfile-endpoint
+++ b/Dockerfile-endpoint
@@ -1,4 +1,5 @@
-FROM python:3.7
+ARG PYTHON_VERSION="3.8"
+FROM python:${PYTHON_VERSION}
 RUN mkdir /opt/funcx
 RUN pip install kubernetes
 RUN pip install --no-binary :all: --force-reinstall pyzmq
