--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -75,6 +75,9 @@ jobs:
   publish:
     needs: test
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python: [ 3.6, 3.7, 3.8, 3.9 ]
     steps:
     - uses: actions/checkout@master
     - name: Extract tag name
@@ -82,47 +85,13 @@ jobs:
       run: echo "##[set-output name=imagetag;]$(echo ${GITHUB_REF##*/})"
       id: extract_tag_name
 
-    - name: Build funcX-endpoint Image for python 3.6
+    - name: Build funcX-endpoint Image for selected python version
       uses: elgohr/Publish-Docker-Github-Action@master
       env:
-        PYTHON_VERSION: 3.6
+        PYTHON_VERSION: ${{ matrix.python }}
       with:
         dockerfile: Dockerfile-endpoint
-        name: funcx/kube-endpoint:${{ steps.extract_tag_name.outputs.imagetag }}-3.6
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        buildargs: PYTHON_VERSION
-
-    - name: Build funcX-endpoint Image for python 3.7
-      uses: elgohr/Publish-Docker-Github-Action@master
-      env:
-        PYTHON_VERSION: 3.7
-      with:
-        dockerfile: Dockerfile-endpoint
-        name: funcx/kube-endpoint:${{ steps.extract_tag_name.outputs.imagetag }}-3.7
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        buildargs: PYTHON_VERSION
-
-
-    - name: Build funcX-endpoint Image for python 3.8
-      uses: elgohr/Publish-Docker-Github-Action@master
-      env:
-        PYTHON_VERSION: 3.8
-      with:
-        dockerfile: Dockerfile-endpoint
-        name: funcx/kube-endpoint:${{ steps.extract_tag_name.outputs.imagetag }}-3.8
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        buildargs: PYTHON_VERSION
-
-    - name: Build funcX-endpoint Image for python 3.9
-      uses: elgohr/Publish-Docker-Github-Action@master
-      env:
-        PYTHON_VERSION: 3.9
-      with:
-        dockerfile: Dockerfile-endpoint
-        name: funcx/kube-endpoint:${{ steps.extract_tag_name.outputs.imagetag }}-3.9
+        name: funcx/kube-endpoint:${{ steps.extract_tag_name.outputs.imagetag }}-${{ matrix.python }}
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         buildargs: PYTHON_VERSION
