--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -73,6 +73,8 @@ jobs:
         codecov --token=${{ secrets.CODECOV_TOKEN }}
 
   publish:
+    # only trigger on pushes to the main repo (not forks, and not PRs)
+    if: ${{ github.repository == 'funcx-faas/funcX' && github.event_name == 'push' }}
     needs: test
     runs-on: ubuntu-latest
     strategy:
