--- a/.github/workflows/tutorial.yaml
+++ b/.github/workflows/tutorial.yaml
@@ -36,11 +36,12 @@ jobs:
       run: |
         timeout 300 python funcx_endpoint/tests/tutorial_ep/test_tutotial_ep.py -t '4b116d3c-1703-4f8f-9f6f-39921e5864df' -i ${{ secrets.API_CLIENT_ID }} -s ${{ secrets.API_CLIENT_SECRET }}
     - name: Send mail
+      if: ${{ failure() }}
       uses: dawidd6/action-send-mail@v3
       with:
         server_address: smtp.gmail.com
         server_port: 465
-        subject: Github Actions tutorial test result
+        subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
         to: ryan.chard@gmail.com,rchard@anl.gov
         from: funcX Tests # <user@example.com>
-        body: Tutorial test job of ${{github.repository}} failed!
+        body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}!
