Add manual workflow dispatch option

--- a/.github/workflows/tutorial.yaml
+++ b/.github/workflows/tutorial.yaml
@@ -3,6 +3,10 @@ name: tutorial_test
 on:
   schedule:
     - cron: "0 * * * *"
+  workflow_dispatch:
+    inputs:
+      tags:
+        description: "manual test"
 
 jobs:
   test:
