Add push trigger to the tutorial test

--- a/.github/workflows/tutorial.yaml
+++ b/.github/workflows/tutorial.yaml
@@ -8,6 +8,11 @@ on:
       tags:
         required: false
         description: "manual test"
+  push:
+    branches:
+      - "*"
+    tags:
+      - "*"
 
 jobs:
   test:
