--- a/.github/workflows/tutorial.yaml
+++ b/.github/workflows/tutorial.yaml
@@ -46,14 +46,14 @@ jobs:
       run: |
         timeout 300 python funcx_endpoint/tests/tutorial_ep/test_tutotial_ep.py -t '4b116d3c-1703-4f8f-9f6f-39921e5864df' -i ${{ secrets.API_CLIENT_ID }} -s ${{ secrets.API_CLIENT_SECRET }}
     - name: Send mail
-      if: ${{ always() }}
+      if: ${{ failure() }}
       uses: dawidd6/action-send-mail@v3
       with:
         server_address: smtp.gmail.com
         server_port: 465
         username: ${{secrets.MAIL_USERNAME}}
         password: ${{secrets.MAIL_PASSWORD}}
-        subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
-        to: ryan.chard@gmail.com,rchard@anl.gov
+        subject: ${{ github.repository }} - Tutorial test ${{ job.status }}
+        to: ryan.chard@gmail.com,rchard@anl.gov,chard@uchicago.edu,yadudoc1729@gmail.com,josh@globus.org,bengal1@illinois.edu,benc@hawaga.org.uk,sirosen@globus.org,uriel@globus.org
         from: funcX Tests # <user@example.com>
-        body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}!
+        body: The ${{ github.repository }} test ${{ github.workflow }} exited with status - ${{ job.status }}!
