--- a/.github/workflows/tutorial.yaml
+++ b/.github/workflows/tutorial.yaml
@@ -30,9 +30,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies for funcx-sdk
+    - name: Install dependencies for funcx-sdk and test requirements
       run: |
         python -m pip install --upgrade pip setuptools wheel
+        python -m pip install -r funcx_sdk/test-requirements.txt
         pip list
     - name: Check for vulnerabilities in libraries
       run: |
