--- a/.github/workflows/tutorial.yaml
+++ b/.github/workflows/tutorial.yaml
@@ -43,7 +43,7 @@ jobs:
       run: |
         python -m pip install funcx
         python -c "from funcx.sdk.client import FuncXClient"
-    - name: Test tutorial endpoint
+    - name: Run smoke tests to check liveness of hosted services
       run: |
         pytest funcx_endpoint/tests/smoke_tests --api-client-id ${{ secrets.API_CLIENT_ID }} --api-client-secret ${{ secrets.API_CLIENT_SECRET }}
     - name: Send mail
@@ -55,6 +55,6 @@ jobs:
         username: ${{secrets.MAIL_USERNAME}}
         password: ${{secrets.MAIL_PASSWORD}}
         subject: ${{ github.repository }} - Tutorial test ${{ job.status }}
-        to: yadudoc1729@gmail.com
+        to: ryan.chard@gmail.com,rchard@anl.gov,chard@uchicago.edu,yadudoc1729@gmail.com,josh@globus.org,bengal1@illinois.edu,benc@hawaga.org.uk,sirosen@globus.org,uriel@globus.org
         from: funcX Tests # <user@example.com>
         body: The ${{ github.repository }} test ${{ github.workflow }} exited with status - ${{ job.status }}!
