--- a/.github/workflows/tutorial.yaml
+++ b/.github/workflows/tutorial.yaml
@@ -24,7 +24,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        ref: main
+        ref: fix_tutorial_test
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
