Run pytest with verbose option (-v)

--- a/.github/workflows/tutorial.yaml
+++ b/.github/workflows/tutorial.yaml
@@ -45,7 +45,7 @@ jobs:
         python -c "from funcx.sdk.client import FuncXClient"
     - name: Run smoke tests to check liveness of hosted services
       run: |
-        pytest funcx_endpoint/tests/smoke_tests --api-client-id ${{ secrets.API_CLIENT_ID }} --api-client-secret ${{ secrets.API_CLIENT_SECRET }}
+        pytest -v funcx_endpoint/tests/smoke_tests --api-client-id ${{ secrets.API_CLIENT_ID }} --api-client-secret ${{ secrets.API_CLIENT_SECRET }}
     - name: Send mail
       if: ${{ failure() }}
       uses: dawidd6/action-send-mail@v3
