Fix docs and add logo
- Specify doc requirements in an extra, `funcx[docs]`
- Convert Tutorial.ipynb to Tutorial.rst, drop nbsphinx
- Add a makefile for `make docs` (for local+CI build)
- Add CI step to check docs and make sure they build
- Add `.readthedocs.yml` for configuring the RTD build
- Add logo image (but disable logo for now, as it looks bad on the RTD
  theme)
- Fix image config to use a `_static/` dir and be consistent

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,17 @@ jobs:
       - name: run pre-commit
         run: pre-commit run -a
 
+  # ensure docs can build, imitating the RTD build as best we can
+  check-docs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v1
+        with:
+          python-version: "3.10"
+      - name: build docs
+        run: make docs
+
   test-sdk:
     strategy:
       matrix:
