smoke_test workflow to only runs on changes
Using `paths`, limit this workflow to PRs and pushes which modify the
smoke tests directory.

--- a/.github/workflows/smoke_test.yaml
+++ b/.github/workflows/smoke_test.yaml
@@ -2,10 +2,15 @@ name: smoke_test
 
 on:
   push:
+    paths:
+      - 'funcx_endpoint/tests/smoke_tests/**'
     branches:
       - "*"
     tags:
       - "*"
+  pull_request:
+    paths:
+      - 'funcx_endpoint/tests/smoke_tests/**'
 
 jobs:
   test:
