--- a/funcx_endpoint/requirements.txt
+++ b/funcx_endpoint/requirements.txt
@@ -18,4 +18,5 @@ retry
 
 # 'parsl' is a core requirement of the funcx-endpoint, essential to a range
 # of different features and functions
-parsl>=1.1.0,<2
+# pin exact versions because it does not use semver
+parsl==1.1.0
