--- a/.github/workflows/hourly.yaml
+++ b/.github/workflows/hourly.yaml
@@ -22,6 +22,7 @@ jobs:
     - name: Install dependencies for funcx-sdk and test requirements
       run: |
         python -m pip install --upgrade pip setuptools wheel
+        python -m pip install ./funcx_sdk
         python -m pip install -r funcx_sdk/test-requirements.txt
     - name: Check for vulnerabilities in libraries
       run: |
