Move smoke tests + run on dev daily
- move smoke tests to a top-level directory with dedicated Makefile,
  tox.ini, and readme
- a new job, `smoke-test-dev`, in the daily workflow runs `make dev`
  in the smoke test dir
- tox config supports `tox -e localdeps` to install SDK and endpoint
  from local repo contents
- github-actions params to set client ID/secret are supported as
  environment variables, not options, simplifying configs
- smoke test conftest.py now includes the dev tutorial endpoint ID

--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -6,6 +6,25 @@ on:
   workflow_dispatch:
 
 jobs:
+  smoke-test-dev:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        ref: main
+    - uses: actions/setup-python@v1
+      with:
+        python-version: 3.7
+    - name: install tox
+      run: python -m pip install 'tox'
+    - name: run smoke tests (dev)
+      env:
+        FUNCX_SMOKE_CLIENT_ID: ${{ secrets.API_CLIENT_ID }}
+        FUNCX_SMOKE_CLIENT_SECRET: ${{ secrets.API_CLIENT_SECRET }}
+      run: |
+        cd smoke_tests
+        make dev
+
   safety-check-sdk:
     runs-on: ubuntu-latest
     steps:
