--- a/.github/workflows/hourly.yaml
+++ b/.github/workflows/hourly.yaml
@@ -20,15 +20,14 @@ jobs:
       with:
         python-version: 3.7
     - name: Install dependencies for funcx-sdk and test requirements
-      run: |
-        python -m pip install --upgrade pip setuptools wheel
-        python -m pip install './funcx_sdk[test]'
-        # fixme: Remove this next install line once issue #640 is fixed.
-        python -m pip install './funcx_endpoint'
-        python -m pip install safety
+      run: python -m pip install 'tox'
     - name: Run smoke tests to check liveness of hosted services
+      env:
+        FUNCX_SMOKE_CLIENT_ID: ${{ secrets.API_CLIENT_ID }}
+        FUNCX_SMOKE_CLIENT_SECRET: ${{ secrets.API_CLIENT_SECRET }}
       run: |
-        pytest -v funcx_endpoint/tests/smoke_tests --api-client-id ${{ secrets.API_CLIENT_ID }} --api-client-secret ${{ secrets.API_CLIENT_SECRET }}
+        cd smoke_tests
+        make prod
 
   notify:
     runs-on: ubuntu-latest
