Fix minor bugs discovered by smoke tests
- FuncxWebClient could not initialize because it didn't set
  service_name. Set this, plus an explanatory comment on what the
  service_name attribute does
- Typo in FunctionRegistrationData helper (had `self` as a positional
  arg, as this function was originally written as a helper method)
- Remove bound on `globus-sdk` in `funcx-endpoint` because the version
  is bounded by `funcx` more accurately

--- a/smoke_tests/tox.ini
+++ b/smoke_tests/tox.ini
@@ -25,7 +25,7 @@ passenv =
 # don't try to install a package
 skip_install = true
 deps =
-    ../funcx_sdk
-    ../funcx_endpoint
+    -e ../funcx_sdk
+    -e ../funcx_endpoint
     pytest
 commands = pytest -v {posargs}
