Update tox config to run sdk integration tests

--- a/funcx_sdk/tox.ini
+++ b/funcx_sdk/tox.ini
@@ -5,4 +5,4 @@ skip_missing_interpreters = true
 [testenv]
 usedevelop = true
 extras = test
-commands = pytest funcx/tests/unit/ {posargs}
+commands = pytest funcx/tests/unit/ funcx/tests/integration/ {posargs}
