--- a/helm/funcx_endpoint/values.yaml
+++ b/helm/funcx_endpoint/values.yaml
@@ -9,6 +9,7 @@ image:
   tag: main
   pullPolicy: Always
 
+workerDebug: False
 workerImage: python:3.6-buster
 workerInit: pip install funcx-endpoint>=0.2.0
 workerNamespace: default
