Begin fixing testsuite for endpoint

--- a/funcx_endpoint/tox.ini
+++ b/funcx_endpoint/tox.ini
@@ -5,7 +5,14 @@ skip_missing_interpreters = true
 [testenv]
 usedevelop = true
 extras = test
-commands = python -m coverage run -m pytest tests/funcx_endpoint tests/test_rabbit_mq {posargs}
+commands =
+    coverage erase
+    coverage run -m pytest tests/funcx_endpoint {posargs}
+    coverage run -m pytest tests/test_rabbit_mq {posargs}
+    coverage report
+
+[testenv:specific]
+commands = python -m coverage run -m pytest {posargs}
 
 [testenv:mypy]
 deps = mypy
