Cleanup to 'funcx_sdk' version handling
- Use packaging.version.Version to parse versions for version
  comparison
- Move more version comparison logic into a dedicated helper (making
  it more testable)
- Move the version file for the 'funcx' package from
  'funcx/sdk/version.py' to 'funcx/version.py' and adjust various
  scripts and docs to show the new path
- Pull the version number from 'version.py' with a regex match, not by
  exec()ing the module at install time. This ensures that the module
  can import anything it needs without any worries about issues at
  install time (when modules and packages will not be available for
  import)

--- a/changelog.d/scriv.ini
+++ b/changelog.d/scriv.ini
@@ -3,7 +3,7 @@ format = rst
 rst_header_chars = -^
 output_file = docs/changelog.rst
 entry_title_template = funcx & funcx-endpoint v{{ version }}
-version = literal: funcx_sdk/funcx/sdk/version.py: __version__
+version = literal: funcx_sdk/funcx/version.py: __version__
 
 # compare against scriv default:
 # categories = Removed, Added, Changed, Deprecated, Fixed, Security
