Update mypy deps with typeshed
Add types-retry and types-requests to get stubs from typeshed. Also,
pin mypy version.

--- a/funcx_endpoint/tox.ini
+++ b/funcx_endpoint/tox.ini
@@ -11,7 +11,10 @@ commands =
     coverage report
 
 [testenv:mypy]
-deps = mypy
+deps =
+    mypy==0.950
+    types-retry
+    types-requests
 commands = mypy funcx_endpoint/
 
 [testenv:publish-release]
