Fix type annotations in logging_config
The trace level addition hits a bunch of attr definition errors.
Ignore all of these, as mypy will not be able to understand the
addition of levels to `logging`.

--- a/funcx_endpoint/tox.ini
+++ b/funcx_endpoint/tox.ini
@@ -15,7 +15,7 @@ deps =
     mypy==0.950
     types-retry
     types-requests
-commands = mypy funcx_endpoint/
+commands = mypy funcx_endpoint/ {posargs}
 
 [testenv:publish-release]
 skip_install = true
