Update github actions and `make lint` to run mypy

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,6 +24,10 @@ jobs:
         run: |
           cd funcx_sdk
           tox -e mypy
+      - name: mypy (endpoint)
+        run: |
+          cd funcx_endpoint
+          tox -e mypy
 
   # ensure docs can build, imitating the RTD build as best we can
   check-docs:
