--- a/funcx_endpoint/tox.ini
+++ b/funcx_endpoint/tox.ini
@@ -11,8 +11,11 @@ commands =
     coverage report
 
 [testenv:mypy]
-deps = mypy
-commands = mypy funcx_endpoint/
+deps =
+    mypy==0.950
+    types-retry
+    types-requests
+commands = mypy funcx_endpoint/ {posargs}
 
 [testenv:publish-release]
 skip_install = true
