Correct tests and update tox deps to install local sdk
Add additional typing to pass mypy tests.

--- a/funcx_endpoint/tox.ini
+++ b/funcx_endpoint/tox.ini
@@ -5,6 +5,7 @@ skip_missing_interpreters = true
 [testenv]
 passenv =
     RABBITMQ_INTEGRATION_TEST_URI
+deps = ../funcx_sdk/
 extras = test
 usedevelop = true
 commands =
@@ -17,6 +18,7 @@ deps =
     mypy==0.950
     types-retry
     types-requests
+    ../funcx_sdk/
 commands = mypy funcx_endpoint/ {posargs}
 
 [testenv:publish-release]
