--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,6 +47,7 @@ jobs:
       - uses: actions/setup-python@v1
       - name: install requirements
         run: |
+          python -m pip install './funcx_sdk'
           python -m pip install './funcx_endpoint'
           python -m pip install safety
       - name: run safety check
